sok warning gone :3